--- a/gdl2/Pediatric_Trauma_BIG_Score.v1.test.yml
+++ b/gdl2/Pediatric_Trauma_BIG_Score.v1.test.yml
@@ -1,33 +1,23 @@
 guidelines:
-  1: Pediatric_Trauma_BIG_Score.v1
+  1: Pediatric_trauma_BIG_score.v1
 test_cases:
-- id: BIG score 14.5
+- id: 1. Pre-condition not satisfied
   input:
     1:
-      gt0003|INR: 1
-      gt0004|GCS: 4
-      gt0005|Base deficit: 1,mmol/l
-  expected_output:
-    1:
-      gt0011|Predicted In-hospital mortality: 9.00,%
-      gt0015|Total score: 14.5
-- id: score 7.5
+      gt0003|Base deficit|: 10,mmol/l
+      gt0004|GCS|: 10
+      gt0006|INR|: 1,1
+      gt0011|Age|: 19,a
+  expected_output: {}
+- id: 2. Pre-condition satisfied
   input:
     1:
-      gt0003|INR: 1
-      gt0004|GCS: 11
-      gt0005|Base deficit: 1,mmol/l
+      gt0003|Base deficit|: 10,mmol/l
+      gt0004|GCS|: 10
+      gt0006|INR|: 1,1
+      gt0011|Age|: 10,a
   expected_output:
     1:
-      gt0011|Predicted In-hospital mortality: 2.40,%
-      gt0015|Total score: 7.5
-- id: Score 22.5
-  input:
-    1:
-      gt0003|INR: 3
-      gt0004|GCS: 3
-      gt0005|Base deficit: 3,mmol/l
-  expected_output:
-    1:
-      gt0011|Predicted In-hospital mortality: 33.00,%
-      gt0015|Total score: 22.5
+      gt0008|BIG score|: 17.50,1
+      gt0009|Predicted in-hospital mortality|: 15.3,%
+
