--- a/gdl2/ACC-AHA_Heart_Failure_Staging.v1.test.yml
+++ b/gdl2/ACC-AHA_Heart_Failure_Staging.v1.test.yml
@@ -1,104 +1,90 @@
 guidelines:
   1: ACC-AHA_Heart_Failure_Staging.v1
 test_cases:
-- id: Stage 0
+- id: 1- Negative Test
+  input:
+    1: {}
+  expected_output:
+    1: {}
+- id: 2- Not Applicable
   input:
     1:
-      gt0004|Q1.Patient with history of hypertension, coronary artery disease, OR diabetes (If yes go to Q4): 0|local::at0005|No|
-      gt0005|Q2.Patient using cardiotoxins: 0|local::at0009|No|
-      gt0006|Q3.Patient with family history of cardiomyopathy: 0|local::at0013|No|
-      gt0007|Q4.Patient with previous MI, LV systolic dysfunction, or asymptomatic valvular disease(If yes go to Q5): 0|local::at0020|No|
-      ? gt0008|Q5.Patient with known structural heart disease, shortness of breath
-        and fatigue(Reduced exercise tolerance) (If yes go to Q6)
-      : 0|local::at0023|No|
-      ? gt0009|Q6.Patient with marked heart failure symptoms at rest, despite maximum
-        therapy(Those who are recurrently hospitalized or cannot be safely discharged
-        from the hospital without specialized intervention.)
-      : 0|local::at0026|No|
+      gt0024|Patient with history of hypertension or coronary artery disease OR diabetes: 0|local::at0005|No|
+      gt0025|Patient using cardiotoxins: 0|local::at0009|No|
+      gt0026|Patient with family history of cardiomyopathy: 0|local::at0013|No|
   expected_output:
     1:
-      gt0010|Stage: 0|local::at0031|Patient does not have substantial risk of HF based ACC AHA staging guidelines.|
-      gt0017|Management: 0|local::at0009|Patient does not have substantial risk of HF based ACC/AHA staging guidelines.|
-
-
-- id: Stage A
+      gt0032|Management: Patient does not have substantial risk of HF based ACC AHA staging guidelines.
+      gt0031|Staging: Not Applicable
+- id: 3- Stage A-1
   input:
     1:
-      gt0004|Q1.Patient with history of hypertension, coronary artery disease, OR diabetes (If yes go to Q4): 1|local::at0006|Yes|
-      gt0005|Q2.Patient using cardiotoxins: 0|local::at0009|No|
-      gt0006|Q3.Patient with family history of cardiomyopathy: 0|local::at0013|No|
-      gt0007|Q4.Patient with previous MI, LV systolic dysfunction, or asymptomatic valvular disease(If yes go to Q5): 0|local::at0020|No|
-      ? gt0008|Q5.Patient with known structural heart disease, shortness of breath
-        and fatigue(Reduced exercise tolerance) (If yes go to Q6)
-      : 0|local::at0023|No|
-      ? gt0009|Q6.Patient with marked heart failure symptoms at rest, despite maximum
-        therapy(Those who are recurrently hospitalized or cannot be safely discharged
-        from the hospital without specialized intervention.)
-      : 0|local::at0026|No|
+      gt0024|Patient with history of hypertension or coronary artery disease OR diabetes: 1|local::at0006|Yes|
+      gt0025|Patient using cardiotoxins: 0|local::at0009|No|
+      gt0026|Patient with family history of cardiomyopathy: 0|local::at0013|No|
+      gt0027|Patient with previous MI or LV systolic dysfunction or asymptomatic valvular disease: 0|local::at0020|No|
   expected_output:
     1:
-      gt0010|Stage: 1|local::at0032|A- High risk for developing HF but no structural disorder of the heart|
-      gt0017|Management: 1|local::at0010|Therapy considerations:Treat hypertension;Encourage smoking cessation;Treat lipid disorders;Encourage regular exercise;Discourage alcohol intake/illicit drug use;ACE inhibitors in appropriate patients.|
-
-
-- id: Stage B
+      gt0032|Management: Treat hypertension Encourage smoking cessation. Treat lipid disorders Encourage regular exercise. Discourage alcohol intake or illicit drug use. ACE inhibitors in appropriate patients.
+      gt0031|Staging: Stage A. At high risk for heart failure without structural heart disease or symptoms of HF.
+- id: 4- Stage A-2
   input:
     1:
-      gt0004|Q1.Patient with history of hypertension, coronary artery disease, OR diabetes (If yes go to Q4): 1|local::at0006|Yes|
-      gt0005|Q2.Patient using cardiotoxins: 1|local::at0010|Yes|
-      gt0006|Q3.Patient with family history of cardiomyopathy: 1|local::at0014|Yes|
-      gt0007|Q4.Patient with previous MI, LV systolic dysfunction, or asymptomatic valvular disease(If yes go to Q5): 1|local::at0021|Yes|
-      ? gt0008|Q5.Patient with known structural heart disease, shortness of breath
-        and fatigue(Reduced exercise tolerance) (If yes go to Q6)
-      : 0|local::at0023|No|
-      ? gt0009|Q6.Patient with marked heart failure symptoms at rest, despite maximum
-        therapy(Those who are recurrently hospitalized or cannot be safely discharged
-        from the hospital without specialized intervention.)
-      : 0|local::at0026|No|
+      gt0024|Patient with history of hypertension or coronary artery disease OR diabetes: 0|local::at0005|No|
+      gt0025|Patient using cardiotoxins: 1|local::at0010|Yes|
+      gt0026|Patient with family history of cardiomyopathy: 1|local::at0014|Yes|
   expected_output:
     1:
-      gt0010|Stage: 2|local::at0033|B-Structural disorder of the heart but has never developed symptoms of HF|
-      gt0017|Management: 2|local::at0011|All measures under stage A;ACE inhibitors in appropriate patients;Beta-blockers in appropriate patients.|
-
-- id: Stage C
+      gt0032|Management: Treat hypertension Encourage smoking cessation. Treat lipid disorders Encourage regular exercise. Discourage alcohol intake or illicit drug use. ACE inhibitors in appropriate patients.
+      gt0031|Staging: Stage A. At high risk for heart failure without structural heart disease or symptoms of HF.
+- id: 5- Stage B
   input:
     1:
-      gt0004|Q1.Patient with history of hypertension, coronary artery disease, OR diabetes (If yes go to Q4): 1|local::at0006|Yes|
-      gt0005|Q2.Patient using cardiotoxins: 0|local::at0009|No|
-      gt0006|Q3.Patient with family history of cardiomyopathy: 0|local::at0013|No|
-      gt0007|Q4.Patient with previous MI, LV systolic dysfunction, or asymptomatic valvular disease(If yes go to Q5): 1|local::at0021|Yes|
-      ? gt0008|Q5.Patient with known structural heart disease, shortness of breath
-        and fatigue(Reduced exercise tolerance) (If yes go to Q6)
-      : 1|local::at0024|Yes|
-      ? gt0009|Q6.Patient with marked heart failure symptoms at rest, despite maximum
-        therapy(Those who are recurrently hospitalized or cannot be safely discharged
-        from the hospital without specialized intervention.)
-      : 0|local::at0026|No|
+      gt0024|Patient with history of hypertension or coronary artery disease OR diabetes: 1|local::at0006|Yes|
+      gt0025|Patient using cardiotoxins: 1|local::at0010|Yes|
+      gt0026|Patient with family history of cardiomyopathy: 1|local::at0014|Yes|
+      gt0027|Patient with previous MI or LV systolic dysfunction or asymptomatic valvular disease: 1|local::at0021|Yes|
+      gt0028|Patient with known structural heart disease or shortness of breath and fatigue: 0|local::at0023|No|
   expected_output:
     1:
-      gt0010|Stage: 3|local::at0034|C-Past or current symptoms of HF associated with underlying structural heart disease|
-      gt0017|Management: 3|local::at0012|All measures under stage A;Diuretics, ACE inhibitors, beta-blockers, or digitalis for routine use; Dietary salt restriction.|
-
-
-- id: Stage D
+      gt0032|Management: Treat hypertension Encourage smoking cessation. Treat lipid disorders Encourage regular exercise. Discourage alcohol intake or illicit drug use. ACE inhibitors in appropriate patients.Beta-blockers in appropriate patients.
+      gt0031|Staging: Stage B. Structural heart disease without symptoms of HF
+- id: 6- Stage C
   input:
     1:
-      gt0004|Q1.Patient with history of hypertension, coronary artery disease, OR diabetes (If yes go to Q4): 1|local::at0006|Yes|
-      gt0005|Q2.Patient using cardiotoxins: 0|local::at0009|No|
-      gt0006|Q3.Patient with family history of cardiomyopathy: 0|local::at0013|No|
-      gt0007|Q4.Patient with previous MI, LV systolic dysfunction, or asymptomatic valvular disease(If yes go to Q5): 1|local::at0021|Yes|
-      ? gt0008|Q5.Patient with known structural heart disease, shortness of breath
-        and fatigue(Reduced exercise tolerance) (If yes go to Q6)
-      : 1|local::at0024|Yes|
-      ? gt0009|Q6.Patient with marked heart failure symptoms at rest, despite maximum
-        therapy(Those who are recurrently hospitalized or cannot be safely discharged
-        from the hospital without specialized intervention.)
-      : 1|local::at0027|Yes|
+      gt0024|Patient with history of hypertension or coronary artery disease OR diabetes: 1|local::at0006|Yes|
+      gt0025|Patient using cardiotoxins: 1|local::at0010|Yes|
+      gt0026|Patient with family history of cardiomyopathy: 1|local::at0014|Yes|
+      gt0027|Patient with previous MI or LV systolic dysfunction or asymptomatic valvular disease: 1|local::at0021|Yes|
+      gt0028|Patient with known structural heart disease or shortness of breath and fatigue: 1|local::at0024|Yes|
+      gt0029|Patient with marked heart failure symptoms at rest despite maximum therapy: 0|local::at0026|No|
   expected_output:
     1:
-      gt0010|Stage: 4|local::at0035|D-End-stage disease requiring specialized treatment strategies such as mechanical circulatory support, continuous inotropic infusions, cardiac transplantation, or hospice care.|
-
-      gt0017|Management: 4|local::at0013|All measures under stage A, B and C; Mechanical assist devices; Heart transplantation; Continuous IV inotropic infusions for palliation; Hospice care.|
-
-
-
+      gt0032|Management: Treat hypertension Encourage smoking cessation. Treat lipid disorders Encourage regular exercise. Discourage alcohol intake or illicit drug use. ACE inhibitors in appropriate patients.Diuretics. beta-blockers or digitalis for routine use Dietary salt restriction.
+      gt0031|Staging: Stage C. Structural heart disease with prior or current symptoms of HF.
+- id: 7- stage D-1
+  input:
+    1:
+      gt0024|Patient with history of hypertension or coronary artery disease OR diabetes: 1|local::at0006|Yes|
+      gt0025|Patient using cardiotoxins: 1|local::at0010|Yes|
+      gt0026|Patient with family history of cardiomyopathy: 1|local::at0014|Yes|
+      gt0027|Patient with previous MI or LV systolic dysfunction or asymptomatic valvular disease: 1|local::at0021|Yes|
+      gt0028|Patient with known structural heart disease or shortness of breath and fatigue: 1|local::at0024|Yes|
+      gt0029|Patient with marked heart failure symptoms at rest despite maximum therapy: 1|local::at0027|Yes|
+  expected_output:
+    1:
+      gt0032|Management: Treat hypertension Encourage smoking cessation. Treat lipid disorders Encourage regular exercise. Discourage alcohol intake or illicit drug use. ACE inhibitors in appropriate patients.Beta-blockers in appropriate patients.Diuretics. beta-blockers or digitalis for routine use Dietary salt restriction.Stage D. Refractory HF requiring specialized interventions
+      gt0031|Staging: Stage D. Refractory HF requiring specialized interventions
+- id: 8- stage D-2
+  input:
+    1:
+      gt0024|Patient with history of hypertension or coronary artery disease OR diabetes: 1|local::at0006|Yes|
+      gt0025|Patient using cardiotoxins: 0|local::at0009|No|
+      gt0026|Patient with family history of cardiomyopathy: 0|local::at0013|No|
+      gt0027|Patient with previous MI or LV systolic dysfunction or asymptomatic valvular disease: 1|local::at0021|Yes|
+      gt0028|Patient with known structural heart disease or shortness of breath and fatigue: 1|local::at0024|Yes|
+      gt0029|Patient with marked heart failure symptoms at rest despite maximum therapy: 1|local::at0027|Yes|
+  expected_output:
+    1:
+      gt0032|Management: Treat hypertension Encourage smoking cessation. Treat lipid disorders Encourage regular exercise. Discourage alcohol intake or illicit drug use. ACE inhibitors in appropriate patients.Beta-blockers in appropriate patients.Diuretics. beta-blockers or digitalis for routine use Dietary salt restriction.Stage D. Refractory HF requiring specialized interventions
+      gt0031|Staging: Stage D. Refractory HF requiring specialized interventions
